@@ -1,3 +1,6 @@
+  - Add %OpenCloset::Constants::Measurement::AVG_LEG_BY_HEIGHT
+  - Add %OpenCloset::Constants::Measurement::AVG_KNEE_BY_HEIGHT
+
 v0.0.15   Mon, 20 Mar 2017 17:02:51 +0900
   - OpenCloset::Common::Unpaid 모듈 추가 (#3)
 
